--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,8 +1,19 @@
-<div>
-    <ul>
-        <li ng-repeat="tweet in tweets">
-            {{tweet.user}}<br>
-            {{tweet.tweet}}
-        </li>
-    </ul>
-</div>    
+<div class="col-lg-4">
+	<form ng-submit="saveTweet()" class="form-signin">
+        <input type="text" class="form-control" placeholder="Tweet Something" ng-model="newTweet" />
+        <input type="submit" class="btn btn-lg btn-primary btn-block" value="Tweet" />
+    </form>
+</div>
+<div class="col-lg-8">
+	<div class="container">
+		<div class="row">
+			<div class="col-lt-12">
+				<input type="text" class="form-control" placeholder="Find a Tweet" ng-model="filterTweet">
+			</div>
+			<div class="col-lt-12" ng-repeat="tweet in tweets | filter:filterTweet | orderBy:'id':'reverse'">
+				<h4>{{tweet.user}}</h4>
+				<p>{{tweet.tweet}}</p>
+			</div>
+		</div>
+	</div>
+</div>
